src/main/java/com/example/comus/global/error/exception/InternalServerException.java
package com.example.comus.global.error.exception;


import com.example.comus.global.error.ErrorCode;

public class InternalServerException extends BusinessException {
    public InternalServerException(ErrorCode errorCode) {
        super(errorCode);
    }
}